# ariadnetor

./: .gitignore  .pre-commit-config.yaml  BUILD_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile.toml  README.md  build.rs  release.toml  renovate.json
algorithms-fixtures/: Cargo.toml
algorithms-fixtures/src/: dense_fixtures.rs  fixtures.rs  lib.rs
crates/ariadnetor/: Cargo.toml  allowed-external-types.toml
crates/ariadnetor-algorithms/: Cargo.toml
crates/ariadnetor-algorithms/benches/: dmrg_local_eigensolver.rs  mpo_mps_apply.rs
crates/ariadnetor-algorithms/src/: lib.rs  numeric.rs
crates/ariadnetor-algorithms/src/dmrg/: dispatch.rs  env.rs  env_block_sparse.rs  heff.rs  heff_error.rs  mod.rs  sealed.rs  solver.rs  sweep.rs  sweep_block_sparse.rs  wrapper.rs
crates/ariadnetor-algorithms/src/krylov/: arpack.rs  lanczos.rs  lanczos_kernels.rs  mod.rs
crates/ariadnetor-algorithms/tests/: arpack_smallest.rs  dmrg_arpack.rs  dmrg_env.rs  dmrg_envs_block_sparse.rs  dmrg_heff.rs  dmrg_heff_block_sparse.rs  dmrg_heff_error_paths.rs  dmrg_heff_predicate_coverage.rs  dmrg_sweep.rs  dmrg_sweep_block_sparse.rs  dmrg_sweep_coverage.rs  dmrg_sweep_diagnostics.rs  dmrg_sweep_envs_staleness.rs  dmrg_sweep_step_error.rs  dmrg_validation.rs  dmrg_validation_block_sparse.rs  dmrg_wrapper.rs  error_source_forwarding.rs  lanczos.rs  legacy_import_guard.rs
crates/ariadnetor-algorithms/tests/dmrg_heff_block_sparse/: errors.rs  fixtures.rs  helpers.rs  matvec.rs
crates/ariadnetor-core/: Cargo.toml
crates/ariadnetor-core/src/: backend.rs  contraction_error.rs  einsum.rs  label.rs  lib.rs  norm.rs  numeric.rs  scalar.rs
crates/ariadnetor-core/src/einsum/: mod.rs  tests.rs
crates/ariadnetor-cpu/: Cargo.toml
crates/ariadnetor-cpu/src/: eig.rs  gemm.rs  lib.rs  lq.rs  qr.rs  svd.rs
crates/ariadnetor-cpu/tests/: gemm.rs  lq.rs  qr.rs  svd.rs  transpose.rs
crates/ariadnetor-linalg/: Cargo.toml  allowed-external-types.toml
crates/ariadnetor-linalg/benches/: README.md  block_sparse_ops.rs  reorder_sandwich.rs  scalar_ops.rs  sweep_decomp_par.rs  sweep_decomp_rect_par.rs  sweep_gemm_par.rs  sweep_solve_par.rs  sweep_transpose_par.rs  tridiag_eigh.rs
crates/ariadnetor-linalg/examples/: profile_bsp.rs  profile_bsp_decomp.rs  sweep_decomp_par.rs  sweep_decomp_rect_par.rs  sweep_gemm_par.rs  sweep_solve_par.rs  sweep_transpose_par.rs
crates/ariadnetor-linalg/src/: block_sparse_contract.rs  block_sparse_decomp.rs  block_sparse_decomp_canonical.rs  block_sparse_expm.rs  block_sparse_fuse.rs  block_sparse_layout_ops.rs  block_sparse_permute.rs  block_sparse_solve.rs  block_sparse_trace.rs  contract.rs  contract_dispatch.rs  contract_spec.rs  decompose_dispatch.rs  decomposition.rs  eigen.rs  einsum.rs  error.rs  expert.rs  expm.rs  incremental_qr.rs  lib.rs  perm.rs  reorder.rs  reorder_route.rs  scalar_ops.rs  scale_dispatch.rs  sealed.rs  solve.rs  tensor_bridge.rs  test_util.rs  transpose.rs
crates/ariadnetor-linalg/src/block_sparse_contract/: tests.rs
crates/ariadnetor-linalg/src/block_sparse_decomp/: eig.rs  eigh.rs  fused_sector.rs  tests.rs
crates/ariadnetor-linalg/src/decomposition/: lq.rs  (+1 more)
crates/ariadnetor-linalg/tests/: contract.rs  contraction.rs  decomposition.rs  diagonal_scale.rs  eigen.rs  einsum.rs  expm.rs  litmus_routing.rs  order_invariants.rs  output_order_contract.rs  permute.rs  scalar_ops.rs  solve.rs  transpose.rs  tridiag_eigen.rs
crates/ariadnetor-mps/: Cargo.toml
crates/ariadnetor-mps/src/: absorb.rs  apply.rs  apply_data.rs  canonicalize.rs  chain.rs  dispatch.rs  env.rs  env_block_sparse.rs  inner.rs  internal_helpers.rs  lib.rs  site_ops.rs  truncate.rs  truncate_data.rs  types.rs
crates/ariadnetor-mps/tests/: authority.rs  braket_env.rs  braket_env_block_sparse.rs  legacy_import_guard.rs  mps.rs
crates/ariadnetor-native/: Cargo.toml
crates/ariadnetor-native/src/: eig.rs  eigh.rs  gemm.rs  lib.rs  lq.rs  performance.rs  qr.rs  solve.rs  svd.rs  transpose.rs  tridiag_eigh.rs
crates/ariadnetor-native/tests/: eig.rs  eigh.rs  gemm.rs  lq.rs  par_for_dispatch.rs  qr.rs  solve.rs  svd.rs  transpose.rs
crates/ariadnetor-tensor/: Cargo.toml  allowed-external-types.toml
crates/ariadnetor-tensor-compute-dialect/: CMakeLists.txt  Cargo.toml  build.rs
crates/ariadnetor-tensor-compute-dialect/src/: builder.rs  dialect.rs  ffi.rs  lib.rs  memref.rs
crates/ariadnetor-tensor-dialect/: CMakeLists.txt  Cargo.toml  build.rs
crates/ariadnetor-tensor-dialect/src/: builder.rs  dialect.rs  lib.rs  memref.rs
crates/ariadnetor-tensor/benches/: dense_ops.rs  dense_tensor_scalar_ops.rs
crates/ariadnetor-tensor/src/: arithmetic.rs  capability.rs  contraction_error.rs  dense.rs  einsum.rs  error.rs  fat_tensor.rs  index.rs  label.rs  layout.rs  lib.rs  norm.rs  ops.rs  raw_tensor.rs  reorder.rs  repr.rs  scalar.rs  sector.rs  storage.rs  tensor.rs  tensor_data.rs  tensor_storage.rs  test_fixtures.rs
crates/ariadnetor-tensor/tests/: arithmetic.rs  arithmetic_ops.rs  backend_dense_ctor.rs  basic_api.rs  block_sparse_scalar_ops.rs  contraction_order_comprehensive.rs  copy_on_write.rs  dense.rs  dense_fuse_split.rs  dense_order_invariants.rs  dense_reshape.rs  dense_tensor_scalar_ops.rs  design_examples.rs  expand_ops.rs  explicit_contraction.rs  fat_tensor_future.rs  linear_combine.rs  multi_tensor_ops.rs  normalize_ops.rs  replace_slice_ops.rs  slice_ops.rs  strides.rs  tensor_storage.rs  verify_complex_scalar.rs
crates/ariadnetor/examples/: basic_usage.rs  einsum_ir_builder_demo.rs  einsum_parser_demo.rs  lowering_demo.rs  lowering_simple.rs
crates/ariadnetor/src/: diag_tensor.rs  einsum.rs  expr.rs  lib.rs  ops.rs  runtime.rs  tensor.rs
crates/ariadnetor/tests/: builder_tests.rs  dialect_registration.rs  einsum_tests.rs  end_to_end_tests.rs  execution_engine_memref.rs  execution_engine_memref_simple.rs  expert.rs  host_ops.rs  jit_tests.rs  lowering_tests.rs  minimal_execution_engine.rs  mps.rs  operation_building.rs
test-utils/: Cargo.toml
test-utils/src/: dense_fixtures.rs  fixtures.rs  helpers.rs  lib.rs
(+196 files in other folders)
