[workspace]
members = [
  "crates/ariadnetor-core",
  "crates/ariadnetor-tensor",
  "crates/ariadnetor-linalg",
  "crates/ariadnetor-native",
  "crates/ariadnetor-mps",
  "crates/ariadnetor-algorithms",
  "crates/ariadnetor",
  "algorithms-fixtures",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
dead_code = "forbid"
unreachable_pub = "warn"

[workspace.dependencies]
# Linear algebra
faer = "0.24"
hptt = "0.4.0"

# Memory alignment
aligned-vec = "0.6"

# Numeric types
num-complex = "0.4"
num-traits = "0.2"

# Random number generation
rand = "0.10"

# Parallelism
rayon = "1"

# Error handling
thiserror = "2"

# Dev dependencies
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
rstest = "0.26"
syn = { version = "2", features = ["full", "visit"] }

[profile.bench]
debug = "line-tables-only"
split-debuginfo = "packed"
