[package]
name = "algorithms-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariadnetor-core = { path = "../crates/ariadnetor-core" }
# `test-fixtures` exposes `arnet_tensor::test_fixtures::legs`, which
# `fixtures.rs` builds its MPS / MPO legs onto.
ariadnetor-tensor = { path = "../crates/ariadnetor-tensor", features = ["test-fixtures"] }
ariadnetor-native = { path = "../crates/ariadnetor-native" }
ariadnetor-mps = { path = "../crates/ariadnetor-mps" }
num-complex = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
