[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariadnetor-core = { path = "../crates/ariadnetor-core" }
ariadnetor-tensor = { path = "../crates/ariadnetor-tensor" }
# Default features (hptt) kept on: unlike the tensor / linalg leaves
# (which inherit hptt from a higher crate), this consumer crate tops its
# own standalone build graph, so it enables the native transpose kernel
# directly. `default-features = false` here would drop hptt from `-p` builds.
ariadnetor-native = { path = "../crates/ariadnetor-native" }
ariadnetor-mps = { path = "../crates/ariadnetor-mps" }
ariadnetor-algorithms = { path = "../crates/ariadnetor-algorithms" }
num-complex = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
