[package]
name = "ariadnetor-algorithms"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tensor-network algorithms (DMRG, TEBD, ...) built on Ariadnetor"

[features]
default = []
arpack = ["dep:arpack", "dep:num-complex"]
# Passthrough so the litmus `Host`-substrate swap reaches this crate's
# host-pinned tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
ariadnetor-tensor = { path = "../ariadnetor-tensor" }
ariadnetor-linalg = { path = "../ariadnetor-linalg" }
# Default features (hptt) kept on: unlike the tensor / linalg leaves
# (which inherit hptt from a higher crate), this consumer crate tops its
# own standalone build graph, so it enables the native transpose kernel
# directly. `default-features = false` here would drop hptt from `-p` builds.
ariadnetor-native = { path = "../ariadnetor-native" }
ariadnetor-mps = { path = "../ariadnetor-mps" }
num-traits = { workspace = true }
num-complex = { workspace = true, optional = true }
rand = { workspace = true }
arpack = { version = "0.0.3", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
test-utils = { path = "../../test-utils" }

[lib]
name = "arnet_algorithms"
path = "src/lib.rs"

[[bench]]
name = "dmrg_local_eigensolver"
harness = false

[lints]
workspace = true
