[package]
name = "ariadnetor-algorithms"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tensor-network algorithms (DMRG, TEBD, ...) built on Ariadnetor"

[features]
default = []
arpack = ["dep:arpack", "dep:num-complex"]
# Opt-in passthrough enabling the native HPTT transpose kernel (off by default
# -> pure-Rust). See `ariadnetor-native`'s `hptt`.
hptt = ["ariadnetor-native/hptt"]
# Passthrough so the litmus `Host`-substrate swap reaches this crate's
# host-pinned tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
ariadnetor-tensor = { path = "../ariadnetor-tensor" }
ariadnetor-linalg = { path = "../ariadnetor-linalg" }
ariadnetor-native = { path = "../ariadnetor-native" }
ariadnetor-mps = { path = "../ariadnetor-mps" }
num-traits = { workspace = true }
num-complex = { workspace = true, optional = true }
rand = { workspace = true }
arpack = { version = "0.0.3", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
# Enables `arnet_tensor::test_fixtures` for this crate's tests; resolver v2
# keeps the test-only feature out of normal builds. See ariadnetor-tensor's
# `test-fixtures` feature.
ariadnetor-tensor = { path = "../ariadnetor-tensor", features = ["test-fixtures"] }
criterion = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
algorithms-fixtures = { path = "../../algorithms-fixtures" }

[lib]
name = "arnet_algorithms"
path = "src/lib.rs"

[[bench]]
name = "dmrg_local_eigensolver"
harness = false

[lints]
workspace = true
