[package]
name = "ariadnetor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for Ariadnetor tensor framework"

[dependencies]
num-complex = { workspace = true }
num-traits = { workspace = true }
dashmap = "6.1"
once_cell = "1.20"
thiserror = { workspace = true }

[lib]
name = "arnet_core"
path = "src/lib.rs"
