[package]
name = "ariadnetor-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CPU backend for Ariadnetor (faer GEMM + HPTT transpose)"

[features]
default = ["hptt"]
hptt = ["dep:hptt"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
faer = { workspace = true }
hptt = { path = "../../../hptt-rs", optional = true }
num-complex = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[lib]
name = "arnet_cpu"
path = "src/lib.rs"
