[package]
name = "ariadnetor-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backend-agnostic linear algebra API for Ariadnetor"

[features]
# `native-hptt` is a passthrough that keeps the dev-dep `ariadnetor-native`
# building with its `hptt` feature on. Default-on preserves existing
# `cargo test` / `cargo bench` behavior; pass `--no-default-features`
# to build dev-dep code (tests, benches) without HPTT — required
# for the calibration sweep benches that must exercise the naive transpose fallback.
default = ["native-hptt"]
native-hptt = ["ariadnetor-native/hptt"]
# Passthrough so the litmus `Host`-substrate swap reaches this crate's
# host-pinned tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
ariadnetor-tensor = { path = "../ariadnetor-tensor" }
num-complex = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ariadnetor-native = { path = "../ariadnetor-native", default-features = false }
criterion = { workspace = true }
rand = { workspace = true }

# Criterion regression benches.
[[bench]]
name = "scalar_ops"
harness = false

[[bench]]
name = "block_sparse_ops"
harness = false

# Threshold-sweep instruments: each is a plain `fn main()` that measures the
# `ExecPolicy::Sequential` vs `Parallel(0)` crossover, run on demand via
# `cargo bench --bench sweep_*`. Distinct from the criterion regression benches above.
[[bench]]
name = "sweep_decomp_par"
harness = false

[[bench]]
name = "sweep_decomp_rect_par"
harness = false

[[bench]]
name = "sweep_gemm_par"
harness = false

[[bench]]
name = "sweep_solve_par"
harness = false

[[bench]]
name = "sweep_transpose_par"
harness = false

[lib]
name = "arnet_linalg"
path = "src/lib.rs"

[lints]
workspace = true
