[package]
name = "ariadnetor-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-agnostic linear algebra API for ariadnetor"
keywords = ["tensor", "linear-algebra", "svd", "tensor-network"]
categories = ["science", "mathematics"]

[features]
# Opt-in passthrough enabling the native HPTT transpose kernel through the
# `ariadnetor-tensor` -> `ariadnetor-native` edge (off by default -> pure-Rust).
# Tests / benches that want the accelerated kernel run with `--features hptt`;
# the default exercises the naive transpose fallback.
hptt = ["ariadnetor-tensor/hptt"]
# Passthrough so the litmus `Host`-substrate swap reaches this crate's
# host-pinned tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core", version = "0.0.4" }
ariadnetor-tensor = { path = "../ariadnetor-tensor", version = "0.0.4" }
num-complex = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ariadnetor-native = { path = "../ariadnetor-native" }
# Enables `ariadnetor_tensor::test_fixtures` for this crate's tests; resolver v2
# keeps the test-only feature out of normal builds. See ariadnetor-tensor's
# `test-fixtures` feature.
ariadnetor-tensor = { path = "../ariadnetor-tensor", features = ["test-fixtures"] }
criterion = { workspace = true }
rand = { workspace = true }

# Criterion regression benches.
[[bench]]
name = "scalar_ops"
harness = false

[[bench]]
name = "block_sparse_ops"
harness = false

[[bench]]
name = "reorder_sandwich"
harness = false

# Threshold-sweep instruments: each is a plain `fn main()` that measures the
# `ExecPolicy::Sequential` vs `Parallel(0)` crossover, run on demand via
# `cargo bench --bench sweep_*`. Distinct from the criterion regression benches above.
[[bench]]
name = "sweep_decomp_par"
harness = false

[[bench]]
name = "sweep_decomp_rect_par"
harness = false

[[bench]]
name = "sweep_gemm_par"
harness = false

[[bench]]
name = "sweep_solve_par"
harness = false

[[bench]]
name = "sweep_transpose_par"
harness = false

[lib]
name = "ariadnetor_linalg"
path = "src/lib.rs"

[lints]
workspace = true
