[package]
name = "ariadnetor-mps"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Matrix Product State / Operator (MPS / MPO) data structures and operations for Ariadnetor"

[features]
# Passthrough so the litmus `Host`-substrate swap reaches this crate's
# host-pinned tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
ariadnetor-tensor = { path = "../ariadnetor-tensor" }
ariadnetor-linalg = { path = "../ariadnetor-linalg" }
# Default features (hptt) kept on: unlike the tensor / linalg leaves
# (which inherit hptt from a higher crate), this consumer crate tops its
# own standalone build graph, so it enables the native transpose kernel
# directly. `default-features = false` here would drop hptt from `-p` builds.
ariadnetor-native = { path = "../ariadnetor-native" }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[lib]
name = "arnet_mps"
path = "src/lib.rs"

[lints]
workspace = true
