[package]
name = "ariadnetor-mps"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Matrix Product State / Operator (MPS / MPO) data structures and operations for ariadnetor"

[features]
# Opt-in passthrough enabling the native HPTT transpose kernel (off by default
# -> pure-Rust). See `ariadnetor-native`'s `hptt`.
hptt = ["ariadnetor-native/hptt"]
# Passthrough so the litmus `Host`-substrate swap reaches this crate's
# host-pinned tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
ariadnetor-tensor = { path = "../ariadnetor-tensor" }
ariadnetor-linalg = { path = "../ariadnetor-linalg" }
ariadnetor-native = { path = "../ariadnetor-native" }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
# Enables `ariadnetor_tensor::test_fixtures` for this crate's tests; resolver v2
# keeps the test-only feature out of normal builds. See ariadnetor-tensor's
# `test-fixtures` feature.
ariadnetor-tensor = { path = "../ariadnetor-tensor", features = ["test-fixtures"] }

[lib]
name = "ariadnetor_mps"
path = "src/lib.rs"

[lints]
workspace = true
