[package]
name = "ariadnetor-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native backend for Ariadnetor (faer + hptt-rs)"

[features]
default = ["hptt"]
hptt = ["dep:hptt"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
faer = { workspace = true }
hptt = { workspace = true, optional = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }

[lib]
name = "arnet_native"
path = "src/lib.rs"

[lints]
workspace = true
