[package]
name = "ariadnetor-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native backend for Ariadnetor (faer; optional HPTT transpose)"

[features]
# `hptt` is opt-in: the HPTT transpose kernel pulls a C++/CMake build, so the
# default stays pure-Rust. Enable it directly or via a dependent crate's `hptt`
# passthrough to use the accelerated kernel.
default = []
hptt = ["dep:hptt"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
faer = { workspace = true }
hptt = { workspace = true, optional = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lib]
name = "arnet_native"
path = "src/lib.rs"

[lints]
workspace = true
