[package]
name = "ariadnetor-tensor-compute-dialect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MLIR Tensor Compute Dialect for Ariadnetor"

[dependencies]
melior = { workspace = true, optional = true }
mlir-sys = { workspace = true, optional = true }
anyhow = { workspace = true }

[build-dependencies]
cmake = { workspace = true }

[features]
default = []
mlir = ["melior", "mlir-sys"]

[lib]
name = "ariadnetor_tensor_compute_dialect"
path = "src/lib.rs"
