[package]
name = "ariadnetor-tensor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust tensor library with support for dense, sparse, and block-sparse tensors"

[features]
random = ["rand"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
aligned-vec = { workspace = true }
anyhow = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "dense_ops"
harness = false
required-features = ["random"]

[lib]
name = "arnet_tensor"
path = "src/lib.rs"
