[package]
name = "ariadnetor-tensor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust tensor library with support for dense, sparse, and block-sparse tensors"

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
# Default features off so dependents (arnet-linalg etc.) building with
# `--no-default-features` reach the no-HPTT path through this crate's
# transitive `arnet-native`. The constructors here only touch
# `NativeBackend::{shared, preferred_order}` and do not require `hptt`.
ariadnetor-native = { path = "../ariadnetor-native", default-features = false }
aligned-vec = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "dense_ops"
harness = false

[[bench]]
name = "dense_tensor_scalar_ops"
harness = false

[lib]
name = "arnet_tensor"
path = "src/lib.rs"
