[package]
name = "ariadnetor-tensor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tensor library with support for dense and block-sparse tensors"

[features]
# Opt-in passthrough enabling the native HPTT transpose kernel (off by default
# -> pure-Rust). See `ariadnetor-native`'s `hptt`.
hptt = ["ariadnetor-native/hptt"]
# Swaps the `Host` substrate alias to a distinct stateful backend so the
# host-pinned surface is proven to hold against a non-native substrate.
# Run via the standalone `cargo make litmus` task, not the default gate.
pluggability-litmus = []
# Exposes the `test_fixtures` BlockSparse leg builders as `pub` so other
# crates' tests can dev-depend on them. Test-only: under resolver v2 a
# dev-dependency feature stays out of normal/published builds.
test-fixtures = []

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
# Plain dependency: `ariadnetor-native` defaults to no `hptt`, so this stays
# pure-Rust unless a consumer opts into this crate's `hptt` feature.
ariadnetor-native = { path = "../ariadnetor-native" }
aligned-vec = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
# Self dev-dependency enabling `test-fixtures` for this crate's own
# integration tests (`tests/*.rs`): they are separate crates that link the
# non-`cfg(test)` lib build, so they reach `test_fixtures` only via the feature.
ariadnetor-tensor = { path = ".", features = ["test-fixtures"] }

[[bench]]
name = "dense_ops"
harness = false

[[bench]]
name = "dense_tensor_scalar_ops"
harness = false

[lib]
name = "ariadnetor_tensor"
path = "src/lib.rs"

[lints]
workspace = true
