[package]
name = "ariadnetor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance tensor network framework in Pure Rust"

[features]
# Passthrough so the litmus `Host`-substrate swap reaches the umbrella's
# public-API host-ergonomic tests; see ariadnetor-tensor's `pluggability-litmus`.
pluggability-litmus = ["ariadnetor-tensor/pluggability-litmus"]

[dependencies]
ariadnetor-core = { path = "../ariadnetor-core" }
ariadnetor-tensor = { path = "../ariadnetor-tensor" }
ariadnetor-linalg = { path = "../ariadnetor-linalg" }
ariadnetor-native = { path = "../ariadnetor-native" }

[dev-dependencies]
# Enables `arnet_tensor::test_fixtures` for this crate's integration tests.
ariadnetor-tensor = { path = "../ariadnetor-tensor", features = ["test-fixtures"] }

[lib]
name = "arnet"
path = "src/lib.rs"

[lints]
workspace = true
